--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="container" style="max-width: 700px; margin: auto">
-		<form action="action.php" method="POST" id="js-form" class="form">
+		<form action="act.php" id="js-form" class="form">
 			<div class="form__bg"></div>
 
 			<input class="input" name="number" type="text" placeholder="Ваш номер" required />
